<resources>
    <string name="app_name">TheMovies</string>

    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="homepage">Homepage</string>
    <string name="release_date">Release Date</string>
    <string name="popularity">Popularity</string>
    <string name="email_hint">Enter your E-mail address</string>
    <string name="password_hint">Password here</string>
    <string name="submit">Submit</string>

</resources>
